# gpt-augmented-news-recommendation

./: .envrc.example  .gitignore  README.md  description_score_accuration.json  main.py  pyproject.toml
dataset/: download_generated_data.py
scripts/: evaluate_result.sh  main.sh  train_lstur.sh  train_naml.sh  train_npa.sh  train_nrms.sh
src/config/: config.py
src/const/: env.py  mind.py  path.py  wandb.py
src/experiment/: train.py
src/experiment/generation/: analyze_text.py  gpt_based_text_generation.py  prompt.py
src/experiment/limitation/: check_category_description.py  execute_fn_in_multithread.py  openai_tools.py  prompt.py  score_category_description.py
src/mind/: CategoryAugmentedMINDDataset.py  MINDDataset.py  dataframe.py
src/recommendation/: __init__.py
src/recommendation/common_layers/: PersonalizedAttention.py
src/recommendation/lstur/: LSTUR.py  PLMBasedNewsEncoder.py  UserEncoder.py  __init__.py
src/recommendation/naml/: NAML.py  PLMBasedNewsEncoder.py  UserEncoder.py  __init__.py
src/recommendation/npa/: NPA.py  PLMBasedNewsEncoder.py  UserEncoder.py  __init__.py
src/recommendation/nrms/: NRMS.py  PLMBasedNewsEncoder.py  UserEncoder.py
src/utils/: list.py  slack.py  text.py
test/mind/: test_MINDDataFrame.py
test/recommendation/: test_common.py
test/recommendation/lstur/: test_lstur.py
test/recommendation/naml/: test_naml.py
test/recommendation/npa/: test_npa.py
test/recommendation/nrms/: test_nrms.py
