[project]
name = "gpt_augmented_news_recommendation"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "YadaYuki", email = "yada.yuki@fuji.waseda.jp" }
]
dependencies = [
    "polars~=0.19.13",
    "pandas~=2.1.3",
    "pyarrow~=12.0.0",
    "requests~=2.31.0",
    "tqdm~=4.66.1",
    "pydantic~=1.10.9",
    "matplotlib~=3.7.1",
    "scikit-learn~=1.2.2",
    "implicit~=0.7.0",
    "h5py~=3.9.0",
    "torch~=2.1.0",
    "transformers~=4.35.0",
    "accelerate~=0.21.0",
    "hydra-core~=1.3.2",
    "openai~=1.2.4",
    "tiktoken~=0.5.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.2.1", "mypy~=1.3.0", "pytest~=7.3.1", "types-requests~=2.31.0.1"]
[tool.hatch.metadata]
allow-direct-references = true
[tool.ruff]
line-length = 119
[tool.ruff.isort]
lines-after-imports = 2

[tool.mypy]
python_version = 3.11
disallow_untyped_defs=true


[tool.hatch.build.targets.wheel]
packages = ["src"]
